--- a/projekt/car_optimalization.ipynb
+++ b/projekt/car_optimalization.ipynb
@@ -1,12 +1,20 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7952c277-0ba9-4182-a071-4f2089f66737",
+   "cell_type": "markdown",
+   "id": "25be30cd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<h1 style=\"text-align:center\">Optymalizacja zmiany biegów samochodu</h1>\n",
+    "\n",
+    "<h2>Wstęp</h2>\n",
+    "\n",
+    "<p>Skrzynia zmiany biegów jest mechanizmem, który przekłada obroty silnika na koła pojazdu, umożliwiając ruszanie, przyspieszanie oraz jazdę z różnymi prędkościami. Poprzez dobór odpowiednich przełożeń pozwala ona utrzymać silnik w korzystnym zakresie obrotów. Niższe biegi zapewniają większą siłę napędową przy niskich prędkościach, natomiast wyższe biegi umożliwiają ekonomiczną jazdę ze stałą prędkością.</p>\n",
+    "\n",
+    "<h2>Cel projektu</h2>\n",
+    "\n",
+    "<p>Celem projektu jest opracowanie strategii optymalnej zmiany biegów, która zmniejszy zużycie paliwa oraz emisję tlenków azotu. Odpowiedni dobór momentu zmiany biegu pozwala utrzymać silnik w obszarze najwyższej sprawności, co przekłada się na bardziej ekonomiczną i ekologiczną eksploatację pojazdu.</p>"
+   ]
   }
  ],
  "metadata": {
