--- a/projekt/car_optimalization.ipynb
+++ b/projekt/car_optimalization.ipynb
@@ -7,19 +7,80 @@
    "source": [
     "<h1 style=\"text-align:center\">Optymalizacja zmiany biegów samochodu</h1>\n",
     "\n",
-    "<h2>Wstęp</h2>\n",
+    "## Wstęp\n",
     "\n",
-    "<p>Skrzynia zmiany biegów jest mechanizmem, który przekłada obroty silnika na koła pojazdu, umożliwiając ruszanie, przyspieszanie oraz jazdę z różnymi prędkościami. Poprzez dobór odpowiednich przełożeń pozwala ona utrzymać silnik w korzystnym zakresie obrotów. Niższe biegi zapewniają większą siłę napędową przy niskich prędkościach, natomiast wyższe biegi umożliwiają ekonomiczną jazdę ze stałą prędkością.</p>\n",
+    "Skrzynia zmiany biegów jest mechanizmem, który przekłada obroty silnika na koła pojazdu, umożliwiając ruszanie, przyspieszanie oraz jazdę z różnymi prędkościami. Poprzez dobór odpowiednich przełożeń pozwala ona utrzymać silnik w korzystnym zakresie obrotów. Niższe biegi zapewniają większą siłę napędową przy niskich prędkościach, natomiast wyższe biegi umożliwiają ekonomiczną jazdę ze stałą prędkością.\n",
     "\n",
-    "<h2>Cel projektu</h2>\n",
+    "## Cel projektu\n",
     "\n",
-    "<p>Celem projektu jest opracowanie strategii optymalnej zmiany biegów, która zmniejszy zużycie paliwa oraz emisję tlenków azotu. Odpowiedni dobór momentu zmiany biegu pozwala utrzymać silnik w obszarze najwyższej sprawności, co przekłada się na bardziej ekonomiczną i ekologiczną eksploatację pojazdu.</p>"
+    "Celem projektu jest opracowanie strategii optymalnej zmiany biegów, która zmniejszy zużycie paliwa oraz emisję tlenków azotu. Odpowiedni dobór momentu zmiany biegu pozwala utrzymać silnik w obszarze najwyższej sprawności, co przekłada się na bardziej ekonomiczną i ekologiczną eksploatację pojazdu.\n",
+    "\n",
+    "## Opis modelu\n",
+    "\n",
+    "### Ruch samochodu<sup><a href=#def>1</a></sup>\n",
+    "\n",
+    "Ruch samochodu można opisać wzorem z II zasady dynamiki Newtona\n",
+    "$$\\sum F = m_{v}a$$\n",
+    "Które można przekształcić na\n",
+    "$$\\frac{dv}{dt} = \\frac{1}{m_{v}}(F_{x}-F_{D}-F_{R}-F_{G})$$\n",
+    "\n",
+    "\n",
+    "#### Postacie poszczególnych sił<sup><a href=#def>1</a></sup>\n",
+    "\n",
+    "##### Siła pociągowa\n",
+    "\n",
+    "$$F_{x} = \\frac{T_{Eng}R_{n}\\eta}{r_{w}}$$\n",
+    "\n",
+    "Wpływ momentów bezwładności elementów wirujących pominięto, zakładając że ich wkład do dynamiki ruchu pojazdu jest niewielki w porównaniu z masą pojazdu.\n",
+    "##### Opór areodynamiczny\n",
+    "$$F_{D} = \\frac{1}{2}\\rho c_{d}A_{f}v^2$$\n",
+    "\n",
+    "##### Opór toczenia\n",
+    "\n",
+    "$$F_{R} = \\mu m_{v}g$$\n",
+    "\n",
+    "##### Opór nachylenia terenu(Siła gradientu)\n",
+    "\n",
+    "$$F_{G} = m_{v}g\\sin(\\theta)_{Road}$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9697c773",
+   "metadata": {},
+   "source": [
+    "### Notacja <div id=\"def\"></div>\n",
+    "$t$ - czas($s$)\n",
+    "$m_{v}$ - masa pojazdu($kg$)  \n",
+    "$v$ - prędkość pojazdu($\\frac{m}{s}$)  \n",
+    "$a$ - przyspieszenie pojazdu($\\frac{m}{s^2}$)  \n",
+    "$F_{x}$ - siła pociągowa($N$)  \n",
+    "$F_{D}$ - opór areodynamiczny($N$)  \n",
+    "$F_{R}$ - opór toczenia($N$)  \n",
+    "$F_{G}$ - opór nachylenia terenu($N$)  \n",
+    "$T_{Eng}$ - moment obrotowy silnika($\\frac{N}{m}$)  \n",
+    "$R_{n}$ - stosunek przełożenia n  \n",
+    "$\\eta$ - sprawność ukłądu napędowego  \n",
+    "$r_{w}$ - promień opony($m$)  \n",
+    "$\\rho$ - gęstość powietrza  \n",
+    "$c_{D}$ - współczynnik oporu pojazdu  \n",
+    "$A_{f}$ - powierzchnia czołowa pojazdu($m^2$)  \n",
+    "$g$ - przyspieszenie ziemskie  \n",
+    "$\\theta_{Road}$ - kąt drogi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dde47c66",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
