--- a/projekt/car_optimalization.ipynb
+++ b/projekt/car_optimalization.ipynb
@@ -17,31 +17,52 @@
     "\n",
     "## Opis modelu\n",
     "\n",
-    "### Ruch samochodu<sup><a href=#def>1</a></sup>\n",
+    "### Ruch samochodu\n",
     "\n",
     "Ruch samochodu można opisać wzorem z II zasady dynamiki Newtona\n",
-    "$$\\sum F = m_{v}a$$\n",
-    "Które można przekształcić na\n",
-    "$$\\frac{dv}{dt} = \\frac{1}{m_{v}}(F_{x}-F_{D}-F_{R}-F_{G})$$\n",
+    "$$\\sum F = ma$$\n",
+    "Które można przekształcić na<sup><a href=#zrodlo1>1</a></sup>\n",
+    "$$\\frac{dv}{dt} = \\frac{1}{m}(F_{x}-F_{D}-F_{R}-F_{G})$$\n",
     "\n",
+    "gdzie   \n",
+    "$F_{x}$ - siła pociągowa   \n",
+    "$F_{D}$ - opór areodynamiczny   \n",
+    "$F_{R}$ - opór toczenia  \n",
+    "$F_{G}$ - opór nachylenia terenu  \n",
     "\n",
-    "#### Postacie poszczególnych sił<sup><a href=#def>1</a></sup>\n",
+    "#### Postacie poszczególnych sił\n",
     "\n",
-    "##### Siła pociągowa\n",
+    "##### Siła pociągowa<sup><a href=#zrodlo1>1</a></sup>\n",
+    "Siła generowana przez układ napędowy, przenoszona na podłoże, która umożliwia ruch obiektu wynosi. Wpływ bezwładności elementów wirujących pominięto, zakładając że ich wkład do dynamiki ruchu pojazdu jest niewielki w porównaniu z masą pojazdu.\n",
     "\n",
-    "$$F_{x} = \\frac{T_{Eng}R_{n}\\eta}{r_{w}}$$\n",
+    "$$F_{x} = \\frac{T_{Eng}R_{n}\\eta}{r}$$\n",
+    "gdzie  \n",
+    "$T_{Eng}$ - moment obrotowy silnika($\\frac{N}{m}$)  \n",
+    "$R_{n}$ - stosunek przełożenia n  \n",
+    "$\\eta$ - sprawność ukłądu napędowego  \n",
+    "$r$ - promień opony\n",
     "\n",
-    "Wpływ momentów bezwładności elementów wirujących pominięto, zakładając że ich wkład do dynamiki ruchu pojazdu jest niewielki w porównaniu z masą pojazdu.\n",
-    "##### Opór areodynamiczny\n",
-    "$$F_{D} = \\frac{1}{2}\\rho c_{d}A_{f}v^2$$\n",
+    "##### Opór areodynamiczny<sup><a href=#zrodlo1>1</a></sup>\n",
+    "Opór areodynamiczny działający na rzut powierzchni przodu pojazdu $A_{f}$ przy prędkości $v$ opisuje wzór\n",
     "\n",
-    "##### Opór toczenia\n",
+    "$$F_{D} = \\frac{1}{2}\\rho c_{W}Sv^2$$\n",
+    "gdzie  \n",
+    "$\\rho$ - gęstość powietrza  \n",
+    "$c_{W}$ - współczynnik oporu pojazdu  \n",
+    "$S$ - powierzchnia czołowa pojazdu\n",
     "\n",
-    "$$F_{R} = \\mu m_{v}g$$\n",
+    "##### Opór toczenia<sup><a href=#zrodlo1>1</a></sup>\n",
+    "Opór toczenia wyraża wzór\n",
     "\n",
-    "##### Opór nachylenia terenu(Siła gradientu)\n",
+    "$$F_{R} = \\mu mg\\cos(\\theta)$$\n",
     "\n",
-    "$$F_{G} = m_{v}g\\sin(\\theta)_{Road}$$"
+    "gdzie  \n",
+    "$\\mu$ - współczynnik tarcia toczenia  \n",
+    "$\\theta$ - kąt nachylenia terenu\n",
+    "##### Opór nachylenia terenu(Siła gradientu)<sup><a href=#zrodlo1>1</a></sup>\n",
+    "\n",
+    "$$F_{G} = mg\\sin(\\theta)$$\n",
+    "\n"
    ]
   },
   {
@@ -50,8 +71,8 @@
    "metadata": {},
    "source": [
     "### Notacja <div id=\"def\"></div>\n",
-    "$t$ - czas($s$)\n",
-    "$m_{v}$ - masa pojazdu($kg$)  \n",
+    "$t$ - czas($s$)  \n",
+    "$m$ - masa pojazdu($kg$)  \n",
     "$v$ - prędkość pojazdu($\\frac{m}{s}$)  \n",
     "$a$ - przyspieszenie pojazdu($\\frac{m}{s^2}$)  \n",
     "$F_{x}$ - siła pociągowa($N$)  \n",
@@ -61,21 +82,24 @@
     "$T_{Eng}$ - moment obrotowy silnika($\\frac{N}{m}$)  \n",
     "$R_{n}$ - stosunek przełożenia n  \n",
     "$\\eta$ - sprawność ukłądu napędowego  \n",
-    "$r_{w}$ - promień opony($m$)  \n",
+    "$r$ - promień opony($m$)  \n",
     "$\\rho$ - gęstość powietrza  \n",
-    "$c_{D}$ - współczynnik oporu pojazdu  \n",
-    "$A_{f}$ - powierzchnia czołowa pojazdu($m^2$)  \n",
+    "$c_{W}$ - współczynnik oporu pojazdu  \n",
+    "$S$ - powierzchnia czołowa pojazdu($m^2$)  \n",
     "$g$ - przyspieszenie ziemskie  \n",
-    "$\\theta_{Road}$ - kąt drogi"
+    "$\\theta$ - kąt nachylenia terenu"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dde47c66",
+   "cell_type": "markdown",
+   "id": "a4b52845",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Bibliografia\n",
+    "\n",
+    "1. Oglieve CJ, Mohammadpour M, Rahnejat H. Optimisation of the vehicle transmission and the gear-shifting strategy for the minimum fuel consumption and the minimum nitrogen oxide emissions. Proceedings of the Institution of Mechanical Engineers, Part D: Journal of Automobile Engineering. 2017;231(7):883-899. doi:10.1177/0954407017702985<div id=\"zrodlo1\"></div>\n",
+    "  "
+   ]
   }
  ],
  "metadata": {
