--- a/projekt/car_optimalization.ipynb
+++ b/projekt/car_optimalization.ipynb
@@ -75,6 +75,74 @@
     "\n",
     "$$\\dot m_f=\\frac{dp}{dt}= \\frac{P}{\\eta*H_u}$$\n",
     "\n",
+    "## Wyznaczenie punktu pracy silnika\n",
+    "\n",
+    "Prędkość obrotowa wału korbowego silnika wynosi:\n",
+    "\n",
+    "$$\n",
+    "N_{eng} = \\frac{v \\cdot i_g \\cdot i_0}{2\\pi \\cdot r_{wheel}} \\cdot 60\n",
+    "$$\n",
+    "\n",
+    "Moment obrotowy generowany przez silnik, wynikający z równowagi sił oporów ruchu, można wyrazić jako:\n",
+    "\n",
+    "$$\n",
+    "T_{eng} = \\frac{R_{total} \\cdot r_{wheel}}{i_g \\cdot i_0 \\cdot \\eta_{trans}}\n",
+    "$$\n",
+    "\n",
+    "gdzie:\n",
+    "\n",
+    "- $i_g$ — przełożenie wybranego biegu  \n",
+    "- $i_0$ — przełożenie główne  \n",
+    "- $R_{total}$ — całkowita siła oporów ruchu  \n",
+    "- $\\eta_{trans}$ — sprawność układu przeniesienia napędu  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Model zużycia paliwa oparty na BSFC\n",
+    "\n",
+    "Zamiast stałej sprawności $\\eta$, stosuje się jednostkowe zużycie paliwa **BSFC**, które zależy od aktualnego punktu pracy silnika $(N_{eng}, T_{eng})$.\n",
+    "\n",
+    "$$\n",
+    "\\dot{m}_f(t) = \\frac{BSFC(N_{eng}, T_{eng}) \\cdot P_e(t)}{3.6 \\times 10^6}\n",
+    "$$\n",
+    "\n",
+    "gdzie:\n",
+    "\n",
+    "- $BSFC(N, T)$ — jednostkowe zużycie paliwa [$\\mathrm{g/kWh}$]  \n",
+    "- $P_e(t)$ — moc mechaniczna silnika [$\\mathrm{W}$], obliczana jako  \n",
+    "$$\n",
+    "P_e = F_{\\text{opory}} \\cdot v\n",
+    "$$\n",
+    "- $3.6 \\times 10^6$ — współczynnik konwersji z $\\mathrm{kWh}$ na $\\mathrm{Ws}$ (J)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Model emisji NOx\n",
+    "\n",
+    "Jednostkowa emisja tlenków azotu zależy od aktualnego punktu pracy silnika $(N_{eng}, T_{eng})$:\n",
+    "\n",
+    "$$\n",
+    "\\dot{m}_{NO_x}(t) = \\frac{e_{NO_x}(N_{eng}, T_{eng}) \\cdot P_e(t)}{3.6 \\times 10^6}\n",
+    "$$\n",
+    "\n",
+    "gdzie:\n",
+    "\n",
+    "- $e_{NO_x}(N, T)$ — jednostkowa emisja NOx [$\\mathrm{g/kWh}$]  \n",
+    "- $P_e(t)$ — moc mechaniczna silnika [$\\mathrm{W}$]\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Funkcja celu optymalizacji\n",
+    "\n",
+    "Celem algorytmu sterującego zmianą biegów jest wybór takiej sekwencji przełożeń $i_g(t)$, która minimalizuje koszt przejazdu:\n",
+    "\n",
+    "$$\n",
+    "J = \\int_0^{T} \\left[ W \\cdot \\dot{m}_f(t) + (1 - W) \\cdot \\dot{m}_{NO_x}(t) \\right] \\, dt\n",
+    "$$\n",
+    "\n",
+    "gdzie:\n",
+    "\n",
+    "- $W \\in [0,1]$ — współczynnik wagowy określający kompromis pomiędzy oszczędnością paliwa a redukcją emisji NOx\n"
     "### Emisja gazów\n"
    ]
   },
