--- a/projekt/car_optimalization.ipynb
+++ b/projekt/car_optimalization.ipynb
@@ -142,7 +142,7 @@
     "\n",
     "gdzie:\n",
     "\n",
-    "- $W \\in [0,1]$ — współczynnik wagowy określający kompromis pomiędzy oszczędnością paliwa a redukcją emisji NOx\n"
+    "- $W \\in [0,1]$ — współczynnik wagowy określający kompromis pomiędzy oszczędnością paliwa a redukcją emisji NOx\n",
     "### Emisja gazów\n"
    ]
   },
