dodanie odnośników do bibiografi

--- a/projekt/car_optimalization.ipynb
+++ b/projekt/car_optimalization.ipynb
@@ -69,7 +69,7 @@
     "\n",
     "---\n",
     "\n",
-    "## Wyznaczenie punktu pracy silnika\n",
+    "## Wyznaczenie punktu pracy silnika<sup><a href=#zrodlo1>1</a></sup>\n",
     "\n",
     "Prędkość obrotowa wału korbowego silnika wynosi:\n",
     "\n",
@@ -92,7 +92,7 @@
     "\n",
     "---\n",
     "\n",
-    "## Model zużycia paliwa oparty na BSFC\n",
+    "## Model zużycia paliwa oparty na BSFC<sup><a href=#zrodlo1>1</a></sup>\n",
     "\n",
     "Zamiast stałej sprawności $\\eta$, stosuje się jednostkowe zużycie paliwa **BSFC**, które zależy od aktualnego punktu pracy silnika $(N_{eng}, T_{eng})$.\n",
     "\n",
@@ -111,7 +111,7 @@
     "\n",
     "---\n",
     "\n",
-    "## Model emisji NOx\n",
+    "## Model emisji NOx<sup><a href=#zrodlo1>1</a></sup>\n",
     "\n",
     "Jednostkowa emisja tlenków azotu zależy od aktualnego punktu pracy silnika $(N_{eng}, T_{eng})$:\n",
     "\n",
@@ -126,7 +126,7 @@
     "\n",
     "---\n",
     "\n",
-    "## Funkcja celu optymalizacji\n",
+    "## Funkcja celu optymalizacji<sup><a href=#zrodlo1>1</a></sup>\n",
     "\n",
     "Celem algorytmu sterującego zmianą biegów jest wybór takiej sekwencji przełożeń $i_g(t)$, która minimalizuje koszt przejazdu:\n",
     "\n",
