drobne poprawki wizualne

--- a/projekt/car_optimalization.ipynb
+++ b/projekt/car_optimalization.ipynb
@@ -90,9 +90,7 @@
     "- $R_{total}$ — całkowita siła oporów ruchu  \n",
     "- $\\eta_{trans}$ — sprawność układu przeniesienia napędu  \n",
     "\n",
-    "---\n",
-    "\n",
-    "## Model zużycia paliwa oparty na BSFC<sup><a href=#zrodlo1>1</a></sup>\n",
+    "### Model zużycia paliwa oparty na BSFC<sup><a href=#zrodlo1>1</a></sup>\n",
     "\n",
     "Zamiast stałej sprawności $\\eta$, stosuje się jednostkowe zużycie paliwa **BSFC**, które zależy od aktualnego punktu pracy silnika $(N_{eng}, T_{eng})$.\n",
     "\n",
@@ -109,9 +107,7 @@
     "$$\n",
     "- $3.6 \\times 10^6$ — współczynnik konwersji z $\\mathrm{kWh}$ na $\\mathrm{Ws}$ (J)\n",
     "\n",
-    "---\n",
-    "\n",
-    "## Model emisji NOx<sup><a href=#zrodlo1>1</a></sup>\n",
+    "### Model emisji NOx<sup><a href=#zrodlo1>1</a></sup>\n",
     "\n",
     "Jednostkowa emisja tlenków azotu zależy od aktualnego punktu pracy silnika $(N_{eng}, T_{eng})$:\n",
     "\n",
@@ -124,9 +120,7 @@
     "- $e_{NO_x}(N, T)$ — jednostkowa emisja NOx [$\\mathrm{g/kWh}$]  \n",
     "- $P_e(t)$ — moc mechaniczna silnika [$\\mathrm{W}$]\n",
     "\n",
-    "---\n",
-    "\n",
-    "## Funkcja celu optymalizacji<sup><a href=#zrodlo1>1</a></sup>\n",
+    "### Funkcja celu optymalizacji<sup><a href=#zrodlo1>1</a></sup>\n",
     "\n",
     "Celem algorytmu sterującego zmianą biegów jest wybór takiej sekwencji przełożeń $i_g(t)$, która minimalizuje koszt przejazdu:\n",
     "\n",
