--- a/projekt/car_optimalization.ipynb
+++ b/projekt/car_optimalization.ipynb
@@ -67,9 +67,7 @@
     "Zgodnie z wyprowadzeniem wszystkich sił działających na pojazd i podstaweniu ich do równania otrzymujemy\n",
     "$$\\frac{dv}{dt} = \\frac{1}{m}(\\frac{T_{Eng}R_{n}\\eta}{r}-\\frac{1}{2}\\rho c_{W}Sv^2-\\mu mg\\cos(\\theta)-mg\\sin(\\theta))$$\n",
     "\n",
-    "---\n",
-    "\n",
-    "## Wyznaczenie punktu pracy silnika<sup><a href=#zrodlo1>1</a></sup>\n",
+    "### Wyznaczenie punktu pracy silnika<sup><a href=#zrodlo1>1</a></sup>\n",
     "\n",
     "Prędkość obrotowa wału korbowego silnika wynosi:\n",
     "\n",
