--- a/projekt/car_optimalization.ipynb
+++ b/projekt/car_optimalization.ipynb
@@ -601,6 +601,10 @@
     "Należy jednak podkreślić, że zastosowany krok czasowy $dt = 10s$ jest niefizyczny z punktu widzenia dynamiki pojazdu. W rzeczywistym układzie zmiany prędkości, obrotów silnika oraz decyzje o zmianie biegu zachodzą w skali ułamków sekundy. W konsekwencji zarówno metoda Eulera, jak i Rungego–Kutty nie opisują w tym przypadku wiernie rzeczywistego procesu fizycznego, a uzyskane wyniki należy traktować wyłącznie jako ilustrację wpływu metody całkowania na dokładność rozwiązania numerycznego.\n",
     "\n",
     "Analiza ta jednoznacznie pokazuje, że przy dużych krokach czasowych metoda Eulera traci zastosowanie w symulacjach dynamicznych, natomiast metoda Rungego–Kutty pozostaje bardziej odporna na wzrost kroku czasowego, choć również wymaga jego odpowiedniego doboru w celu zachowania realizmu fizycznego."
+    "\n",
+    "## Podsumowanie projektu<sup><a href=#zrodlo1>1</a></sup>\n",
+    "\n",
+    "Celem projektu było opracowanie modelu ruchu pojazdu oraz strategii zmiany biegów minimalizującej zużycie paliwa i emisję NOx. Wykorzystano model dynamiki pojazdu oparty na mapach BSFC, przy czym emisję NOx ujęto w sposób uproszczony. Symulacje potwierdziły, że optymalizacja momentów zmiany biegów pozwala na pracę silnika w zakresie najniższych wartości BSFC przy zachowaniu wymaganego momentu napędowego, co bezpośrednio redukuje zużycie paliwa. Należy zaznaczyć, że ze względu na uproszczenia w modelowaniu emisji NOx, wyniki te mają charakter przybliżony. Szczegółową strategię optymalnej zmiany biegów przedstawiają wykresy uzyskane dla kroku czasowego 0,01 s, które ilustrują momenty zmiany biegów w funkcji prędkości pojazdu i obrotów silnika.\n",
    ]
   },
   {
