--- a/projekt/car_optimalization.ipynb
+++ b/projekt/car_optimalization.ipynb
@@ -600,7 +600,7 @@
     "\n",
     "Należy jednak podkreślić, że zastosowany krok czasowy $dt = 10s$ jest niefizyczny z punktu widzenia dynamiki pojazdu. W rzeczywistym układzie zmiany prędkości, obrotów silnika oraz decyzje o zmianie biegu zachodzą w skali ułamków sekundy. W konsekwencji zarówno metoda Eulera, jak i Rungego–Kutty nie opisują w tym przypadku wiernie rzeczywistego procesu fizycznego, a uzyskane wyniki należy traktować wyłącznie jako ilustrację wpływu metody całkowania na dokładność rozwiązania numerycznego.\n",
     "\n",
-    "Analiza ta jednoznacznie pokazuje, że przy dużych krokach czasowych metoda Eulera traci zastosowanie w symulacjach dynamicznych, natomiast metoda Rungego–Kutty pozostaje bardziej odporna na wzrost kroku czasowego, choć również wymaga jego odpowiedniego doboru w celu zachowania realizmu fizycznego."
+    "Analiza ta jednoznacznie pokazuje, że przy dużych krokach czasowych metoda Eulera traci zastosowanie w symulacjach dynamicznych, natomiast metoda Rungego–Kutty pozostaje bardziej odporna na wzrost kroku czasowego, choć również wymaga jego odpowiedniego doboru w celu zachowania realizmu fizycznego.\n"
     "\n",
     "## Podsumowanie projektu<sup><a href=#zrodlo1>1</a></sup>\n",
     "\n",
