--- a/projekt/car_optimalization.ipynb
+++ b/projekt/car_optimalization.ipynb
@@ -604,7 +604,7 @@
     "\n",
     "## Podsumowanie projektu<sup><a href=#zrodlo1>1</a></sup>\n",
     "\n",
-    "Celem projektu było opracowanie modelu ruchu pojazdu oraz strategii zmiany biegów minimalizującej zużycie paliwa i emisję NOx. Wykorzystano model dynamiki pojazdu oparty na mapach BSFC, przy czym emisję NOx ujęto w sposób uproszczony. Symulacje potwierdziły, że optymalizacja momentów zmiany biegów pozwala na pracę silnika w zakresie najniższych wartości BSFC przy zachowaniu wymaganego momentu napędowego, co bezpośrednio redukuje zużycie paliwa. Należy zaznaczyć, że ze względu na uproszczenia w modelowaniu emisji NOx, wyniki te mają charakter przybliżony. Szczegółową strategię optymalnej zmiany biegów przedstawiają wykresy uzyskane dla kroku czasowego 0,01 s, które ilustrują momenty zmiany biegów w funkcji prędkości pojazdu i obrotów silnika.\n",
+    "Celem projektu było opracowanie modelu ruchu pojazdu oraz strategii zmiany biegów minimalizującej zużycie paliwa i emisję NOx. Wykorzystano model dynamiki pojazdu oparty na mapach BSFC, przy czym emisję NOx ujęto w sposób uproszczony. Symulacje potwierdziły, że optymalizacja momentów zmiany biegów pozwala na pracę silnika w zakresie najniższych wartości BSFC przy zachowaniu wymaganego momentu napędowego, co bezpośrednio redukuje zużycie paliwa. Należy zaznaczyć, że ze względu na uproszczenia w modelowaniu emisji NOx, wyniki te mają charakter przybliżony. Szczegółową strategię optymalnej zmiany biegów przedstawiają wykresy uzyskane dla kroku czasowego 0,01 s, które ilustrują momenty zmiany biegów w funkcji prędkości pojazdu i obrotów silnika.\n"
    ]
   },
   {
