zmiana nazwy wykresu

--- a/projekt/car_optimalization.ipynb
+++ b/projekt/car_optimalization.ipynb
@@ -498,7 +498,7 @@
     "    plt.scatter(optimal_kutt[2],optimal_kutt[-3], c='blue',label='zmiana biegu na wyższy - Rungego-Kutty')\n",
     "    plt.legend()\n",
     "    plt.xlabel(\"Czas [s]\")\n",
-    "    plt.ylabel(\"Stan zużycia paliwa [g]\")\n",
+    "    plt.ylabel(\"Stan emisji NOx [g]\")\n",
     "    plt.title(\"Stan zużycia paliwa - wykres 2\")\n",
     "    plt.grid()\n",
     "    plt.show()\n",
