--- a/projekt/car_optimalization.ipynb
+++ b/projekt/car_optimalization.ipynb
@@ -499,7 +499,7 @@
     "    plt.legend()\n",
     "    plt.xlabel(\"Czas [s]\")\n",
     "    plt.ylabel(\"Stan emisji NOx [g]\")\n",
-    "    plt.title(\"Stan zużycia paliwa - wykres 2\")\n",
+    "    plt.title(\"Stan emisji NOx - wykres 2\")\n",
     "    plt.grid()\n",
     "    plt.show()\n",
     "\n",
